[package]
name = "Rust_Telegram_Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = "0.12.2"
base64 = "0.22.1"
log = "0.4"
env_logger = "0.11.3"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
